// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`harvests.utils loadYieldEvents encounters an error requesting an standard vault loads yield events from the subgraph 1`] = `
Array [
  Object {
    "amount": 18087.137228369163,
    "apr": 43.08283925122179,
    "balance": 10000000,
    "block": 15396257,
    "earned": 1171558139.6931558,
    "grossApr": 47.869821390246436,
    "timestamp": 1661253900000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8273.444229204368,
    "apr": 4.084825017457429,
    "balance": 10000000,
    "block": 15396257,
    "earned": 111079262.22129785,
    "grossApr": 4.538694463841588,
    "timestamp": 1661253900000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4261.975371596002,
    "apr": 1.7384462495527824,
    "balance": 10000000,
    "block": 15388629,
    "earned": 47273830.821742855,
    "grossApr": 1.931606943947536,
    "timestamp": 1661148573000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4223.102994638644,
    "apr": 1.7225903301631276,
    "balance": 10000000,
    "block": 15363244,
    "earned": 46842658.416531846,
    "grossApr": 1.9139892557368086,
    "timestamp": 1660800880000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 4285.530143667973,
    "apr": 1.7480541664451443,
    "balance": 10000000,
    "block": 15337891,
    "earned": 47535100.35356516,
    "grossApr": 1.9422824071612717,
    "timestamp": 1660455256000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 18705.595517466125,
    "apr": 44.55598222107543,
    "balance": 10000000,
    "block": 15314213,
    "earned": 1211617538.4528334,
    "grossApr": 49.50664691230604,
    "timestamp": 1660132736000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8418.142660217834,
    "apr": 4.156266578506966,
    "balance": 10000000,
    "block": 15314213,
    "earned": 113021983.35608464,
    "grossApr": 4.618073976118851,
    "timestamp": 1660132736000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 5603.2033092929305,
    "apr": 2.285528875516314,
    "balance": 10000000,
    "block": 15312417,
    "earned": 62150731.10667718,
    "grossApr": 2.53947652835146,
    "timestamp": 1660107820000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
]
`;

exports[`harvests.utils loadYieldEvents requesting an influence vault loads yield events from the subgraph 1`] = `
Array [
  Object {
    "amount": 18087.137228369163,
    "apr": 9.780451982747769,
    "balance": 4500000,
    "block": 15396257,
    "earned": 1171558139.6931558,
    "grossApr": 10.867168869719743,
    "timestamp": 1661253900000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 8273.444229204368,
    "apr": 0.9273166679709072,
    "balance": 4500000,
    "block": 15396257,
    "earned": 111079262.22129785,
    "grossApr": 1.030351853301008,
    "timestamp": 1661253900000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 4261.975371596002,
    "apr": 0.39465342497957007,
    "balance": 4500000,
    "block": 15388629,
    "earned": 47273830.821742855,
    "grossApr": 0.4385038055328557,
    "timestamp": 1661148573000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 4223.102994638644,
    "apr": 0.3910538929865982,
    "balance": 4500000,
    "block": 15363244,
    "earned": 46842658.416531846,
    "grossApr": 0.4345043255406647,
    "timestamp": 1660800880000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 4285.530143667973,
    "apr": 0.39683456650722165,
    "balance": 4500000,
    "block": 15337891,
    "earned": 47535100.35356516,
    "grossApr": 0.44092729611913517,
    "timestamp": 1660455256000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 18705.595517466125,
    "apr": 10.114877576111313,
    "balance": 4500000,
    "block": 15314213,
    "earned": 1211617538.4528334,
    "grossApr": 11.238752862345905,
    "timestamp": 1660132736000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 8418.142660217834,
    "apr": 0.9435349759924179,
    "balance": 4500000,
    "block": 15314213,
    "earned": 113021983.35608464,
    "grossApr": 1.048372195547131,
    "timestamp": 1660132736000,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
  Object {
    "amount": 5603.2033092929305,
    "apr": 0.5188494029333707,
    "balance": 4500000,
    "block": 15312417,
    "earned": 62150731.10667718,
    "grossApr": 0.5764993365926341,
    "timestamp": 1660107820000,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "type": "Tree Distribution",
    "value": 291478500000,
  },
]
`;

exports[`harvests.utils loadYieldEvents requesting an standard vault loads yield events from the subgraph 1`] = `
Array [
  Object {
    "amount": 6462.338060585159,
    "apr": 6.006022314128918,
    "balance": 10000000,
    "block": 14719741,
    "earned": 163322669.80516872,
    "grossApr": 6.67335812680991,
    "timestamp": 1651788304000,
    "token": "0x62B9c7356A2Dc64a1969e19C23e4f579F9810Aa7",
    "type": "Harvest",
    "value": 66170000000,
  },
  Object {
    "amount": 414.4540216181148,
    "apr": 0.9872129439251023,
    "balance": 10000000,
    "block": 14719741,
    "earned": 26845430.342270147,
    "grossApr": 1.0969032710278914,
    "timestamp": 1651788304000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 10313.848518739553,
    "apr": 9.585571625524985,
    "balance": 10000000,
    "block": 14694100,
    "earned": 260661893.61410472,
    "grossApr": 10.650635139472206,
    "timestamp": 1651437281000,
    "token": "0x62B9c7356A2Dc64a1969e19C23e4f579F9810Aa7",
    "type": "Harvest",
    "value": 66170000000,
  },
  Object {
    "amount": 421.1186708551738,
    "apr": 1.003087872506704,
    "balance": 10000000,
    "block": 14694100,
    "earned": 27277119.667302173,
    "grossApr": 1.1145420805630046,
    "timestamp": 1651437281000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 8548.95779356142,
    "apr": 7.94530258078559,
    "balance": 10000000,
    "block": 14668590,
    "earned": 216057810.31667775,
    "grossApr": 8.828113978650656,
    "timestamp": 1651090393000,
    "token": "0x62B9c7356A2Dc64a1969e19C23e4f579F9810Aa7",
    "type": "Harvest",
    "value": 66170000000,
  },
  Object {
    "amount": 423.486896366854,
    "apr": 1.0087288911898782,
    "balance": 10000000,
    "block": 14668590,
    "earned": 27430516.738370236,
    "grossApr": 1.1208098790998646,
    "timestamp": 1651090393000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 6756.015534480465,
    "apr": 6.278962764603047,
    "balance": 10000000,
    "block": 14642977,
    "earned": 170744780.6029248,
    "grossApr": 6.9766252940033855,
    "timestamp": 1650742506000,
    "token": "0x62B9c7356A2Dc64a1969e19C23e4f579F9810Aa7",
    "type": "Harvest",
    "value": 66170000000,
  },
  Object {
    "amount": 451.8604821337721,
    "apr": 1.076313640459075,
    "balance": 10000000,
    "block": 14642977,
    "earned": 29268359.00925082,
    "grossApr": 1.1959040449545277,
    "timestamp": 1650742506000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
  Object {
    "amount": 6229.096493405911,
    "apr": 5.7892502969537425,
    "balance": 10000000,
    "block": 14617341,
    "earned": 157427955.6778476,
    "grossApr": 6.432500329948603,
    "timestamp": 1650394973000,
    "token": "0x62B9c7356A2Dc64a1969e19C23e4f579F9810Aa7",
    "type": "Harvest",
    "value": 66170000000,
  },
  Object {
    "amount": 416.1743051520761,
    "apr": 0.991310590668443,
    "balance": 10000000,
    "block": 14617341,
    "earned": 26956858.267615426,
    "grossApr": 1.1014562118538256,
    "timestamp": 1650394973000,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
    "type": "Tree Distribution",
    "value": 66170000000,
  },
]
`;
